syntax = "proto3";

package zelazny.tablet;

import "zelazny.proto";

service Tablet {
	rpc StatusCheck(zelazny.StatusCheckRequest) returns (zelazny.StatusCheckResponse);  	
}
